--- a/workspace/padaria/src/interfaceGrafica/PadraoLayout.fxml
+++ b/workspace/padaria/src/interfaceGrafica/PadraoLayout.fxml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
 <!-- Este e um layout padrao da nossa aplicacao,
 	 a ideia e que todas as telas sigam este padrao,
 	 se voce quiser adicionar alguma coisa ao padrao,
 	 fique a vontade                                  -->
-	 
 <!-- Eu nao sei se ira ficar bom, mas eu notei que os botoes normalmente ficaram pequenos
 		entao eu adotei o seguinte padrao, para o tamanho dos botoes,
 		
@@ -23,7 +24,7 @@
 		
 		-->
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
@@ -42,8 +43,8 @@
         </menus>
       </MenuBar>
    </top>
-   <right>
-      <HBox alignment="BOTTOM_RIGHT" maxWidth="347.0" prefHeight="100.0" prefWidth="347.0" BorderPane.alignment="BOTTOM_RIGHT">
+   <bottom>
+      <HBox alignment="BOTTOM_RIGHT" maxHeight="70.0" prefHeight="70.0" prefWidth="400.0" BorderPane.alignment="BOTTOM_RIGHT">
          <children>
             <Button alignment="CENTER" mnemonicParsing="false" prefHeight="38.0" prefWidth="70.0" text="Voltar">
                <font>
@@ -55,5 +56,5 @@
             <Insets bottom="15.0" right="15.0" />
          </padding>
       </HBox>
-   </right>
+   </bottom>
 </BorderPane>
