--- a/workspace/padaria/src/interfaceGrafica/funcionario/PrincipalFuncionarioLayout.fxml
+++ b/workspace/padaria/src/interfaceGrafica/funcionario/PrincipalFuncionarioLayout.fxml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfaceGrafica.funcionario.PrincipalFuncionarioLayoutController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
@@ -33,12 +35,12 @@
             <Insets />
          </BorderPane.margin>
          <children>
-            <Button mnemonicParsing="false" prefHeight="55.0" prefWidth="100.0" text="Estoque">
+            <Button mnemonicParsing="false" onAction="#onActionEstoque" prefHeight="55.0" prefWidth="100.0" text="Estoque">
                <font>
                   <Font size="17.0" />
                </font>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="55.0" prefWidth="100.0" text="Cliente">
+            <Button mnemonicParsing="false" onAction="#onActionCliente" prefHeight="55.0" prefWidth="100.0" text="Cliente">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
@@ -46,7 +48,7 @@
                   <Font size="17.0" />
                </font>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="55.0" prefWidth="100.0" text="Vender">
+            <Button mnemonicParsing="false" onAction="#onActionVender" prefHeight="55.0" prefWidth="100.0" text="Vender">
                <font>
                   <Font size="17.0" />
                </font>
@@ -60,7 +62,7 @@
    <right>
       <HBox alignment="BOTTOM_RIGHT" maxWidth="347.0" prefHeight="100.0" prefWidth="347.0" BorderPane.alignment="BOTTOM_RIGHT">
          <children>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="38.0" prefWidth="70.0" text="Voltar">
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#onActionLogout" prefHeight="38.0" prefWidth="80.0" text="Logout">
                <font>
                   <Font size="15.0" />
                </font>
