--- a/workspace/padaria/src/interfaceGrafica/funcionario/EstoqueFuncionarioLayout.fxml
+++ b/workspace/padaria/src/interfaceGrafica/funcionario/EstoqueFuncionarioLayout.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:controller="interfaceGrafica.funcionario.EstoqueFuncionarioLayoutController" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfaceGrafica.funcionario.EstoqueFuncionarioLayoutController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
@@ -65,11 +65,11 @@
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                <children>
-                  <TableView minHeight="240.0" minWidth="295.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TableView fx:id="tblFuncionario" minHeight="240.0" minWidth="295.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columns>
-                      <TableColumn prefWidth="129.0" text="Nome" />
-                      <TableColumn prefWidth="67.0" text="Preço" />
-                        <TableColumn prefWidth="105.0" text="Qtd" />
+                      <TableColumn fx:id="colNome" prefWidth="129.0" text="Nome" />
+                      <TableColumn fx:id="colPreco" prefWidth="67.0" text="Preço" />
+                        <TableColumn fx:id="colQtd" prefWidth="105.0" text="Qtd" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -100,11 +100,11 @@
                   <Font name="System Bold" size="24.0" />
                </font>
             </Label>
-            <Label text="Nome:" GridPane.rowIndex="1" />
-            <Label text="Descrição:" GridPane.rowIndex="2" />
-            <Label text="Validade:" GridPane.rowIndex="3" />
-            <Label text="Quantidade:" GridPane.rowIndex="4" />
-            <Label text="Preço:" GridPane.rowIndex="5" />
+            <Label fx:id="lblNome" text="Nome:" GridPane.rowIndex="1" />
+            <Label fx:id="lblDescricao" text="Descrição:" GridPane.rowIndex="2" />
+            <Label fx:id="lblValidade" text="Validade:" GridPane.rowIndex="3" />
+            <Label fx:id="lblQuantidade" text="Quantidade:" GridPane.rowIndex="4" />
+            <Label fx:id="lblPreco" text="Preço:" GridPane.rowIndex="5" />
          </children>
          <padding>
             <Insets bottom="100.0" left="10.0" />
@@ -114,7 +114,7 @@
    <bottom>
       <HBox alignment="BOTTOM_RIGHT" prefHeight="40.0" spacing="30.0" BorderPane.alignment="CENTER">
          <children>
-            <Button onAction="#onActionVoltar" alignment="CENTER" mnemonicParsing="false" prefHeight="38.0" prefWidth="70.0" text="Voltar">
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#onActionVoltar" prefHeight="38.0" prefWidth="70.0" text="Voltar">
                <font>
                   <Font size="15.0" />
                </font>
