--- a/workspace/padaria/src/interfaceGrafica/PadraoLayout.fxml
+++ b/workspace/padaria/src/interfaceGrafica/PadraoLayout.fxml
@@ -24,15 +24,15 @@
 		
 		-->
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:controller="PadraoTelaLayoutController" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
           <Menu mnemonicParsing="false" text="Padarex">
             <items>
-              <MenuItem mnemonicParsing="false" text="Sair de sessão" />
-                  <MenuItem mnemonicParsing="false" text="Reiniciar" />
-                  <MenuItem mnemonicParsing="false" text="Fechar" />
+              <MenuItem onAction="#onActionSairDeSessao" mnemonicParsing="false" text="Sair de sessão" />
+                  <MenuItem onAction="#onActionReiniciar" mnemonicParsing="false" text="Reiniciar" />
+                  <MenuItem onAction="#onActionFechar" mnemonicParsing="false" text="Fechar" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Ajuda">
