--- a/workspace/padaria/src/interfaceGrafica/TelaLoginLayout.fxml
+++ b/workspace/padaria/src/interfaceGrafica/TelaLoginLayout.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfaceGrafica.LoginLayoutController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfaceGrafica.TelaLoginLayoutController">
    <children>
       <PasswordField fx:id="tfSenha" layoutX="233.0" layoutY="240.0" />
       <Button fx:id="btnLogin" layoutX="314.0" layoutY="285.0" mnemonicParsing="false" onAction="#botaoLogin" prefHeight="21.0" prefWidth="53.0" text="Login">
@@ -24,9 +24,9 @@
             <Font name="Arial" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="232.0" layoutY="73.0" text="Padarex">
+      <Label layoutX="268.0" layoutY="93.0" text="Login">
          <font>
-            <Font name="Arial Black" size="30.0" />
+            <Font name="Arial Black" size="21.0" />
          </font>
       </Label>
       <TextField fx:id="tfLogin" layoutX="233.0" layoutY="200.0" />
