--- a/workspace/padaria/src/interfaceGrafica/funcionario/TelaClienteFuncionarioLayout.fxml
+++ b/workspace/padaria/src/interfaceGrafica/funcionario/TelaClienteFuncionarioLayout.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfaceGrafica.funcionario.TelaClienteFuncionarioLayoutController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
@@ -52,23 +52,23 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <TextField promptText="Buscar produto" GridPane.columnSpan="2">
+                        <TextField fx:id="ttfBuscarProduto" promptText="Buscar produto" GridPane.columnSpan="2">
                            <GridPane.margin>
                               <Insets left="5.0" right="5.0" top="10.0" />
                            </GridPane.margin>
                         </TextField>
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="Buscar" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-                        <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="Limpar" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                        <Button fx:id="btnBuscar" alignment="CENTER" mnemonicParsing="false" onAction="#onActionBuscar" prefHeight="25.0" prefWidth="70.0" text="Buscar" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                        <Button fx:id="btnLimpar" mnemonicParsing="false" onAction="#onActionLimpar" prefHeight="25.0" prefWidth="70.0" text="Limpar" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
                      </children>
                   </GridPane>
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                <children>
-                  <TableView minHeight="240.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TableView fx:id="tblCliente" minHeight="240.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columns>
-                      <TableColumn prefWidth="129.0" text="Nome" />
-                      <TableColumn prefWidth="67.0" text="Crédito" />
+                      <TableColumn fx:id="colNome" prefWidth="129.0" text="Nome" />
+                      <TableColumn fx:id="colCredito" prefWidth="67.0" text="Crédito" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -79,7 +79,7 @@
       </SplitPane>
    </left>
    <center>
-      <GridPane maxHeight="327.0" minHeight="327.0" minWidth="303.0" BorderPane.alignment="TOP_LEFT">
+      <GridPane maxHeight="300.0" minHeight="300.0" minWidth="303.0" BorderPane.alignment="TOP_LEFT">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="110.0" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -89,6 +89,8 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -105,43 +107,62 @@
             <Label text="Logradouro:" GridPane.rowIndex="2" />
             <Label text="Número:" GridPane.rowIndex="3" />
             <Label text="Complemento:" GridPane.rowIndex="4" />
-            <Label text="Bairro:" GridPane.rowIndex="5" />
             <Label text="Estado:" GridPane.rowIndex="6" />
             <Label text="Crédito:" GridPane.rowIndex="7" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <TextField fx:id="ttfNome" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="ttfLogradouro" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="ttfNumero" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="ttfComplemento" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="ttfEstado" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <TextField fx:id="ttfCredito" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <Label text="Qtd vendas:" GridPane.rowIndex="8" />
+            <Label layoutX="15.0" layoutY="253.0" text="Valor vendas:" GridPane.rowIndex="9" />
+            <TextField fx:id="ttfQtdVendas" layoutX="125.0" layoutY="215.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+            <TextField fx:id="ttfValorVendas" layoutX="125.0" layoutY="215.0" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+            <Label layoutX="15.0" layoutY="167.0" text="Cidade:" GridPane.rowIndex="5" />
+            <TextField fx:id="ttfCidade" layoutX="125.0" layoutY="162.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
          </children>
          <padding>
-            <Insets bottom="50.0" left="10.0" right="5.0" />
+            <Insets left="5.0" right="5.0" />
          </padding>
       </GridPane>
    </center>
    <bottom>
       <HBox alignment="BOTTOM_RIGHT" prefHeight="40.0" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" prefHeight="29.0" prefWidth="95.0" text="Cadastrar">
+            <Button fx:id="btnCadastrar" mnemonicParsing="false" onAction="#onActionCadastrar" prefHeight="29.0" prefWidth="95.0" text="Cadastrar">
                <font>
                   <Font size="15.0" />
                </font>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="29.0" prefWidth="90.0" text="Atualizar">
+            <Button fx:id="btnConfirmarCadastrar" mnemonicParsing="false" onAction="#onActionConfirmarCadastrar" text="Confirmar">
                <font>
                   <Font size="15.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="38.0" prefWidth="70.0" text="Voltar">
+            <Button fx:id="btnCancelarCadastrar" mnemonicParsing="false" onAction="#onActionCancelarCadastrar" text="Cancelar">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Button>
+            <Button fx:id="btnExcluir" mnemonicParsing="false" onAction="#onActionExcluir" text="Excluir">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Button>
+            <Button fx:id="btnAtualizar" mnemonicParsing="false" onAction="#onActionAtualizar" prefHeight="29.0" prefWidth="90.0" text="Atualizar">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Button>
+            <Button fx:id="btnVoltar" alignment="CENTER" mnemonicParsing="false" onAction="#onActionVoltar" prefHeight="38.0" prefWidth="70.0" text="Voltar">
                <font>
                   <Font size="15.0" />
                </font>
             </Button>
          </children>
          <padding>
-            <Insets bottom="15.0" right="15.0" />
+            <Insets bottom="10.0" right="10.0" top="5.0" />
          </padding>
       </HBox>
    </bottom>
