--- a/workspace/padaria/src/interfaceGrafica/TelaEstoqueFuncionarioLayout.fxml
+++ b/workspace/padaria/src/interfaceGrafica/TelaEstoqueFuncionarioLayout.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfaceGrafica.funcionario.TelaEstoqueFuncionarioLayoutController">
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfaceGrafica.TelaEstoqueFuncionarioLayoutController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
