--- a/workspace/padaria/src/interfaceGrafica/TelaMenuPrincipalFuncionarioLayout.fxml
+++ b/workspace/padaria/src/interfaceGrafica/TelaMenuPrincipalFuncionarioLayout.fxml
@@ -2,15 +2,17 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfaceGrafica.funcionario.PrincipalFuncionarioLayoutController">
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfaceGrafica.TelaMenuPrincipalFuncionarioLayoutController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
@@ -29,38 +31,8 @@
         </menus>
       </MenuBar>
    </top>
-   <left>
-      <VBox alignment="CENTER" prefHeight="334.0" prefWidth="188.0" spacing="30.0" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets />
-         </BorderPane.margin>
-         <children>
-            <Button mnemonicParsing="false" onAction="#onActionEstoque" prefHeight="55.0" prefWidth="100.0" text="Estoque">
-               <font>
-                  <Font size="17.0" />
-               </font>
-            </Button>
-            <Button mnemonicParsing="false" onAction="#onActionCliente" prefHeight="55.0" prefWidth="100.0" text="Cliente">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-               <font>
-                  <Font size="17.0" />
-               </font>
-            </Button>
-            <Button mnemonicParsing="false" onAction="#onActionVender" prefHeight="55.0" prefWidth="100.0" text="Vender">
-               <font>
-                  <Font size="17.0" />
-               </font>
-            </Button>
-         </children>
-         <padding>
-            <Insets bottom="10.0" left="10.0" />
-         </padding>
-      </VBox>
-   </left>
    <right>
-      <HBox alignment="BOTTOM_RIGHT" maxWidth="347.0" prefHeight="100.0" prefWidth="347.0" BorderPane.alignment="BOTTOM_RIGHT">
+      <HBox alignment="BOTTOM_RIGHT" maxWidth="347.0" prefHeight="371.0" prefWidth="121.0" BorderPane.alignment="BOTTOM_RIGHT">
          <children>
             <Button alignment="CENTER" mnemonicParsing="false" onAction="#onActionLogout" prefHeight="38.0" prefWidth="80.0" text="Logout">
                <font>
@@ -73,4 +45,43 @@
          </padding>
       </HBox>
    </right>
+   <center>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <VBox alignment="CENTER" layoutX="148.0" layoutY="-7.0" prefHeight="371.0" prefWidth="293.0" spacing="30.0">
+               <children>
+                  <Label text="Menu Principal">
+                     <font>
+                        <Font name="System Bold" size="25.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets bottom="20.0" />
+                     </VBox.margin>
+                  </Label>
+                  <Button mnemonicParsing="false" onAction="#onActionEstoque" prefHeight="45.0" prefWidth="100.0" text="Estoque">
+                     <font>
+                        <Font size="17.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#onActionCliente" prefHeight="45.0" prefWidth="100.0" text="Cliente">
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                     <font>
+                        <Font size="17.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#onActionVender" prefHeight="45.0" prefWidth="100.0" text="Vender">
+                     <font>
+                        <Font size="17.0" />
+                     </font>
+                  </Button>
+               </children>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" />
+               </padding>
+            </VBox>
+         </children>
+      </AnchorPane>
+   </center>
 </BorderPane>
